# pyfindgrep

./: Cargo.toml  Makefile  README.md  pyproject.toml
crates/findgrep/: Cargo.toml
crates/findgrep/src/: batch.rs  data.rs  lib.rs
crates/findgrep/tests/: integration.rs
python/pyfindgrep/: __init__.py  data.py  pyfindgrep_lib.pyi
python/tests/: test_all.py
src/: lib.rs
