[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pyfindgrep"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "pyfindgrep.pyfindgrep_lib"
features = ["pyo3/extension-module"]
python-source = "python"


[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
